# legitimail

./: README.md
legitimail/: pyproject.toml
legitimail/legitimail/: runner.py
legitimail/legitimail/filters/: domain.py
legitimail/legitimail/utilities/: candidate.py  filter.py  loader.py
legitimail/tests/: test_candidate.py  test_filters.py  test_loader.py
